--- a/app/views/spheres/edit.html.erb
+++ b/app/views/spheres/edit.html.erb
@@ -1,6 +1,7 @@
-<h1>Editing Sphere</h1>
+<div class="container">
+  <h3>Editar Âmbito</h3>
 
-<%= render 'form', sphere: @sphere %>
+  <%= render 'form', sphere: @sphere %>
 
-<%= link_to 'Show', @sphere %> |
-<%= link_to 'Back', spheres_path %>
+  <%= link_to 'Back', spheres_path, class: "btn btn-default" %>
+</div>
