--- a/app/views/spheres/new.html.erb
+++ b/app/views/spheres/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Sphere</h1>
+<div class="container">
+  <h3>Novo Âmbito</h3>
 
-<%= render 'form', sphere: @sphere %>
+  <%= render 'form', sphere: @sphere %>
 
-<%= link_to 'Back', spheres_path %>
+  <br/>
+  <%= link_to 'Voltar', spheres_path, class: "btn btn-default" %>
+</div>
