--- a/app/views/objectives/_form.html.erb
+++ b/app/views/objectives/_form.html.erb
@@ -1,15 +1,11 @@
-<%= form_with(model: objective, local: true) do |form| %>
-  <% if objective.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(objective.errors.count, "error") %> prohibited this objective from being saved:</h2>
+<% @objective.errors.full_messages.each do |msg| %>
+  <div class="alert alert-danger" role="alert">
+    <%= msg %>
+  </div>
+<% end %>
 
-      <ul>
-        <% objective.errors.full_messages.each do |message| %>
-          <li><%= message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+
+<%= form_with(model: objective, local: true) do |form| %>
 
   <div class="row">
     <div class="col-sm-8">
@@ -24,8 +20,8 @@
     <div class="col-sm-3">
       <div class="form-group">
         <%= form.label "Âmbito" %>
-        <%= form.collection_select :sphere_id, @spheres, :id, :name, {}, class: "form-control" %>
-        <%= link_to "Criar Âmbito", new_sphere_path, class: "btn btn-primary" %>
+        <%= form.collection_select :sphere_id, @spheres  || [], :id, :name, {}, class: "form-control" %>
+        <%= link_to "Editar Âmbitos", spheres_path, class: "btn btn-primary" %>
       </div>
     </div>
   </div>
