--- a/app/views/spheres/index.html.erb
+++ b/app/views/spheres/index.html.erb
@@ -1,27 +1,28 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
+  <h3>Âmbitos</h3>
 
-<h1>Spheres</h1>
+  <% @spheres.each do |sphere| %>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-header">Âmbito</h5>
+          <div class="padding-all">
+            <h5 class="card-title"><%= sphere.name %></h5>
+            <%= link_to "Editar",
+                        edit_sphere_path(sphere),
+                        class: "btn btn-primary" %>
+            <%= link_to "Remover",
+                        sphere,
+                        method: :delete,
+                        data: {confirm: "Tem certeza que deseja remover o âmbito #{sphere.name}? Ao remover, tambem serão excluidos todos os objetivos estratégicos relacionados ao mesmo."},
+                        class: "btn btn-danger" %>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
 
-  <tbody>
-    <% @spheres.each do |sphere| %>
-      <tr>
-        <td><%= sphere.name %></td>
-        <td><%= link_to 'Show', sphere %></td>
-        <td><%= link_to 'Edit', edit_sphere_path(sphere) %></td>
-        <td><%= link_to 'Destroy', sphere, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <%= link_to "Novo Âmbito", new_sphere_path, class: "btn btn-primary" %>
 
-<br>
-
-<%= link_to 'New Sphere', new_sphere_path %>
+</div>
