--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -8,12 +8,12 @@
         <span class="icon icon-bar"></span>
       </button>
       <%= link_to root_path, method: "get" do %>
-        <%= image_tag("ltr.svg", alt:"logo img 1", class: "image-responsive resize-navbrand p-t-10") %>
+        <%= image_tag("ltr2.svg", alt:"logo img 2", class: "image-responsive resize-navbrand p-t-10") %>
       <% end %>
     </div>
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to "INÍCIO", inicio_path, method: "get" %></li>
+        <li><%= link_to "STATUS", inicio_path, method: "get" %></li>
 
         <li><%= link_to "MEU PLANEJAMENTO", myplan_path, method: "get" %></li>
 
