Changing edit labels on myplan and life_objective to name on plans

--- a/app/views/plans/_form.html.erb
+++ b/app/views/plans/_form.html.erb
@@ -10,7 +10,7 @@
   <div class="row">
     <div class="col-sm-8">
       <div class="form-group">
-        <%= form.label "Objetivo de Vida" %>
+        <%= form.label "Nome do plano" %>
         <%= form.text_area :life_objective, class: "form-control" %>
       </div>
     </div>
