--- a/app/views/plans/edit.html.erb
+++ b/app/views/plans/edit.html.erb
@@ -1,3 +1,5 @@
-<%= render 'form', plan: @plan %>
-
-<%= link_to 'Voltar', plans_path, class:"btn btn-btn-default" %>
+<div class="container">
+  <%= render 'form', plan: @plan %>
+  <br/>
+  <%= link_to 'Voltar', plans_path, class: "btn btn-btn-default" %>
+</div>
