--- a/app/views/plans/new.html.erb
+++ b/app/views/plans/new.html.erb
@@ -6,7 +6,7 @@
   </p>
   <div class="collapse" id="minha-missao" aria-expanded="false" aria-controls="minha-missao">
     <div class="card card-body padding-all">
-      <h5 class="card-title">Objetivo de Vida</h5>
+      <h5 class="card-title">Nome</h5>
       <p class="card-text">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
         squid. Nihil anim keffiyeh
         helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
