--- a/app/views/plans/myplan.html.erb
+++ b/app/views/plans/myplan.html.erb
@@ -6,18 +6,15 @@
         <div class="card-body">
           <h5 class="card-header">
             <strong>Planejamento Estratégico Pessoal de <%= current_user.name %></strong><br/><br/>
-            Data: <%= @current_plan.created_at.strftime("%d/%m/%Y") %></h5>
+            Data: <%= @current_plan.created_at.strftime("%d/%m/%Y") %> <br/><br/>
+            Nome do Plano: <%= "#{@current_plan.life_objective}" %>
+          </h5>
           <div class="padding-all">
-            <h3>Objetivo de vida</h3>
-            <%= "#{@current_plan.life_objective}" %>
-            <hr/>
-
-            <h3>Matriz SWOT</h3>
+            <h3>Matriz SWOT <%= link_to "", plans_swotedit_path, method: "get", class: "btn btn-primary lnr lnr-pencil" %></h3>
             <p class="card-text"><%= render template: "plans/swot" %></p>
-            <%= link_to "Editar SWOT", plans_swotedit_path, method: "get", class: "btn btn-primary" %>
             <hr/>
 
-            <h3>Minha Missão</h3>
+            <h3>Minha Missão <%= link_to "", missions_path, method: "get", class: "btn btn-primary lnr lnr-pencil" %></h3>
             <div class="padding-all">
               <h5><strong>Propósito de Vida</strong></h5>
               <%= "#{@my_mission.purpose_of_life}" %>
@@ -26,10 +23,10 @@
               <h5><strong>Porque existo</strong></h5>
               <%= "#{@my_mission.why_exist}" %>
             </div>
-            <%= link_to "Editar Missão", missions_path, method: "get", class: "btn btn-primary" %>
+
             <hr/>
 
-            <h3>Objetivos Estratégicos</h3>
+            <h3>Objetivos Estratégicos <%= link_to "", editobjectives_path, class: "btn btn-primary lnr lnr-pencil" %></h3>
             <%= render template: "objectives/index" %>
 
             <hr/>
@@ -43,6 +40,6 @@
 
   <% else %>
     <p>Parece que você ainda não criou um planejamento.</p>
-    <%= link_to "Crie um novo plano", new_plan_path, method: "get", class: "btn btn-default" %>
+    <%= link_to "Crie um novo plano", new_plan_path, method: "get", class: "btn btn-primary" %>
   <% end %>
 </div>
