Adding migration to change life_objective to name on plans

--- a/app/views/plans/_form.html.erb
+++ b/app/views/plans/_form.html.erb
@@ -11,7 +11,7 @@
     <div class="col-sm-8">
       <div class="form-group">
         <%= form.label "Nome do plano" %>
-        <%= form.text_area :life_objective, class: "form-control" %>
+        <%= form.text_area :name, class: "form-control" %>
       </div>
     </div>
   </div>
