Updating SWOT table

--- a/app/assets/stylesheets/plans.scss
+++ b/app/assets/stylesheets/plans.scss
@@ -29,7 +29,7 @@
 }
 
 .background-blue-light {
-  background-color: #84A2BA;
+  background-color: #7CC8F1;
 }
 
 .background-red {
@@ -41,8 +41,7 @@
 }
 
 .background-red-light {
-  background-color: #ECB3B3;
-
+  background-color: #ffa47c;
 }
 
 .background-green {
@@ -55,7 +54,7 @@
 }
 
 .background-green-light {
-  background-color: #86B693;
+  background-color: #9bd2b0;
 }
 
 .background-orange {
@@ -68,7 +67,7 @@
 }
 
 .background-orange-light {
-  background-color: #CAAA83;
+  background-color: #FFDB7C;
 }
 
 
