--- a/app/views/plans/swotedit.html.erb
+++ b/app/views/plans/swotedit.html.erb
@@ -9,7 +9,7 @@
   </thead>
   <tbody>
   <tr>
-    <th scope="row">Fatores Internos</th>
+    <th scope="row" width="12%">Fatores Internos</th>
     <td class="background-blue-light">
       Forças
       <hr/>
