--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Activity', new_activity_path %>
+<%= link_to 'New Activity', new_activity_path(goal_id: params[:goal_id]) %>
