Fixing bug when update activities disable all other checked activities

--- a/app/views/activities/index.html.erb
+++ b/app/views/activities/index.html.erb
@@ -18,6 +18,7 @@
     <tbody>
     <% @activities.each do |activity| %>
       <tr>
+        <%= hidden_field_tag "goal_id", @goal_id  %>
         <td><%= check_box_tag "activity_ids[]", activity.id, activity.checked %></td>
         <td><%= activity.title %></td>
         <td><%= activity.checked %></td>
