--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -40,7 +40,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">O <span>LTR</span></h2>
+        <h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">O que é o <span>Life To Remind</span></h2>
       </div>
       <div class="col-md-4 col-sm-4 col-xs-12 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.6s">
         <div class="media">
@@ -51,7 +51,8 @@
             <h3 class="media-heading">LIFE TO REMIND</h3>
           </div>
           <div class="media-body">
-            <p>Consideramos sua vida muito importante. Faça o planejamento dela no Life to Remind, acompanhe seus objetivos de vida pessoais, financeiros e profissionais.</p>
+            <p>Sua vida é muito importante. Faça o planejamento dela no Life to Remind, acompanhe seus objetivos de vida
+              pessoais, financeiros e profissionais ou outro âmbito de sua escolha.</p>
           </div>
         </div>
       </div>
@@ -64,7 +65,9 @@
             <h3 class="media-heading">UM PLANO INDIVIDUAL</h3>
           </div>
           <div class="media-body">
-            <p>Conheça mais a si mesmo. Entenda melhor quem é você, no que é bom, forças, fraquezas, oportunidades e ameaças ao seu redor. Além disso, descobra seu propósito de vida, missão, valores dentre outras características individuais.</p>
+            <p>Conheça mais a si mesmo. Entenda melhor quem é você, no que é bom, forças, fraquezas, oportunidades e
+              ameaças ao seu redor. Além disso, descobra seu propósito de vida, missão, valores dentre outras
+              características individuais.</p>
           </div>
         </div>
       </div>
@@ -77,7 +80,8 @@
             <h3 class="media-heading">REDIRECIONE SEU CAMINHO</h3>
           </div>
           <div class="media-body">
-            <p>O Life to Remind te ajuda a lembrar de seguir seu caminho. Objetivos também podem mudar no decorrer da vida, por que não acompanha-los?</p>
+            <p>O Life to Remind te ajuda conhecer e seguir seu caminho. Objetivos também podem mudar no decorrer da
+              vida, por que não acompanha-los?</p>
           </div>
         </div>
       </div>
@@ -93,22 +97,22 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">NOSSOS <span>SERVIÇOS</span></h2>
+        <h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">Funcionalidades do <span>LTR</span></h2>
       </div>
-      <div class="col-md-4 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
+      <div class="col-md-4 active wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
         <i class="fa fa-laptop"></i>
-        <h4>Web Design</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie. Adipiscing vitae vel quam proin eget mauris eget. Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie.</p>
+        <h4>Diferentes planos</h4>
+
       </div>
       <div class="col-md-4 active wow fadeIn" data-wow-offset="50" data-wow-delay="0.9s">
         <i class="fa fa-cloud"></i>
-        <h4>Cloud Computing</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie. Adipiscing vitae vel quam proin eget mauris eget. Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie.</p>
+        <h4>Matriz SWOT</h4>
+
       </div>
-      <div class="col-md-4 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
+      <div class="col-md-4 active wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
         <i class="fa fa-cog"></i>
-        <h4>UX Design</h4>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie. Adipiscing vitae vel quam proin eget mauris eget. Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie.</p>
+        <h4>Objetivos Estratégicos</h4>
+        
       </div>
     </div>
   </div>
@@ -120,15 +124,14 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s"><span>AWESOME</span> PORTFOLIO</h2>
+        <h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">MEUS <span>PLANOS</span></h2>
       </div>
       <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
         <div class="portfolio-thumb">
           <%= image_tag("portfolio-img1.jpg", alt: "portfolio img 1", class: "img-responsive") %>
           <div class="portfolio-overlay">
-            <h4>Project One</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
-            <a href="#" class="btn btn-default">DETAIL</a>
+            <h4>Plano Um</h4>
+            <a href="#" class="btn btn-default">Detalhes</a>
           </div>
         </div>
       </div>
@@ -136,9 +139,8 @@
         <div class="portfolio-thumb">
           <%= image_tag("portfolio-img2.jpg", alt: "portfolio img 2", class: "img-responsive") %>
           <div class="portfolio-overlay">
-            <h4>Project Two</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
-            <a href="#" class="btn btn-default">DETAIL</a>
+            <h4>Plano Dois</h4>
+            <a href="#" class="btn btn-default">Detalhes</a>
           </div>
         </div>
       </div>
@@ -146,9 +148,8 @@
         <div class="portfolio-thumb">
           <%= image_tag("portfolio-img3.jpg", alt: "portfolio img 3", class: "img-responsive") %>
           <div class="portfolio-overlay">
-            <h4>Project Three</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
-            <a href="#" class="btn btn-default">DETAIL</a>
+            <h4>Plano Três</h4>
+            <a href="#" class="btn btn-default">Detalhes</a>
           </div>
         </div>
       </div>
@@ -156,49 +157,8 @@
         <div class="portfolio-thumb">
           <%= image_tag("portfolio-img1.jpg", alt: "portfolio img 1", class: "img-responsive") %>
           <div class="portfolio-overlay">
-            <h4>Project Four</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
-            <a href="#" class="btn btn-default">DETAIL</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
-        <div class="portfolio-thumb">
-          <%= image_tag("portfolio-img3.jpg", alt: "portfolio img 3", class: "img-responsive") %>
-          <div class="portfolio-overlay">
-            <h4>Project Five</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
-            <a href="#" class="btn btn-default">DETAIL</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
-        <div class="portfolio-thumb">
-          <%= image_tag("portfolio-img4.jpg", alt: "portfolio img 4", class: "img-responsive") %>
-          <div class="portfolio-overlay">
-            <h4>Project Six</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
-            <a href="#" class="btn btn-default">DETAIL</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
-        <div class="portfolio-thumb">
-          <%= image_tag("portfolio-img1.jpg", alt: "portfolio img 1", class: "img-responsive") %>
-          <div class="portfolio-overlay">
-            <h4>Project Seven</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
-            <a href="#" class="btn btn-default">DETAIL</a>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-3 col-sm-6 col-xs-12 wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
-        <div class="portfolio-thumb">
-          <%= image_tag("portfolio-img2.jpg", alt: "portfolio img 2", class: "img-responsive") %>
-          <div class="portfolio-overlay">
-            <h4>Project Eight</h4>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget dia.</p>
-            <a href="#" class="btn btn-default">DETAIL</a>
+            <h4>Plano Quatro</h4>
+            <a href="#" class="btn btn-default">Detalhes</a>
           </div>
         </div>
       </div>
@@ -212,7 +172,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">CONTACT <span>AWESOME</span></h2>
+        <h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">ENTRE EM <span>CONTATO</span></h2>
       </div>
       <div class="col-md-6 col-sm-6 col-xs-12 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.9s">
         <form action="#" method="post">
@@ -230,18 +190,15 @@
       </div>
       <div class="col-md-6 col-sm-6 col-xs-12 wow fadeInRight" data-wow-offset="50" data-wow-delay="0.6s">
         <address>
-          <p class="address-title">OUR ADDRESS</p>
-          <span>Lorem ipsum dolor sit amet, consectetur adipiscing elitquisque tempus ac eget diam et laoreet phasellus ut nisi id leo molestie.</span>
-          <p><i class="fa fa-phone"></i> 010-020-0340</p>
-          <p><i class="fa fa-envelope-o"></i> awesome@company.com</p>
-          <p><i class="fa fa-map-marker"></i> 663 New Walk Roadside, Birdeye View, GO 11020</p>
+          <p class="color-white"><i class="fa fa-envelope-o"></i> @gmail.com</p>
         </address>
+      <!--
         <ul class="social-icon">
-          <li><h4>WE ARE SOCIAL</h4></li>
           <li><a href="#" class="fa fa-facebook"></a></li>
           <li><a href="#" class="fa fa-twitter"></a></li>
           <li><a href="#" class="fa fa-instagram"></a></li>
         </ul>
+      -->
       </div>
     </div>
   </div>
