Collapsable example to plan

--- a/app/views/plans/new.html.erb
+++ b/app/views/plans/new.html.erb
@@ -1,22 +1,29 @@
 <div class="container">
-  <p>
-  <div class="card">
-    <div class="card-footer bg-transparent border-success" data-toggle="collapse" data-target="#minha-missao" role="button" aria-expanded="true" aria-controls="minha-missao">Exemplo</div>
-  </div>
-  </p>
-  <div class="collapse" id="minha-missao" aria-expanded="false" aria-controls="minha-missao">
-    <div class="card card-body padding-all">
-      <h5 class="card-title">Nome</h5>
-      <p class="card-text">Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad
-        squid. Nihil anim keffiyeh
-        helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident.</p>
+
+  <div class="wrap-collabsible p-t-60 p-b-20">
+    <input id="collapsible" class="toggle" type="checkbox">
+    <label for="collapsible" class="lbl-toggle">EXEMPLOS</label>
+    <div class="collapsible-content">
+      <div class="content-inner">
+        <div class="content-text p-b-10">
+          Exemplos de nomes para um plano:
+          <br/>
+          <br/>
+          O melhor plano<br/>
+          Meu plano<br/>
+          um plano<br/>
+          A minha vida<br/>
+          Minha graduação<br/>
+          Minha empresa
+        </div>
+      </div>
     </div>
   </div>
 
 
-  <%= render 'form', plan: @plan %>
-
-  <%= link_to 'Voltar', plans_path, class: "btn btn-default" %>
+  <%= render "form", plan: @plan %>
+  <br/>
+  <%= link_to "Voltar", plans_path, class: "btn btn-default" %>
 
 </div>
 
