Removing unnecessary bootstrap.min.scss file

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -40,7 +40,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">O que é o <span>Life To Remind</span></h2>
+        <h2 class="wow bounceIn" data-wow-offset="50" data-wow-delay="0.3s">O que é o <span>Life to Remind</span></h2>
       </div>
       <div class="col-md-4 col-sm-4 col-xs-12 wow fadeInLeft" data-wow-offset="50" data-wow-delay="0.6s">
         <div class="media">
@@ -112,7 +112,7 @@
       <div class="col-md-4 active wow fadeIn" data-wow-offset="50" data-wow-delay="0.6s">
         <i class="fa fa-cog"></i>
         <h4>Objetivos Estratégicos</h4>
-        
+
       </div>
     </div>
   </div>
