Creating initial screen pipeline

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -38,7 +38,7 @@
 						</span>
         </div>
 
-        <%= form.hidden_field :selected_mission, value: nil %>
+        <%= form.hidden_field :selected_plan, value: nil %>
 
         <div class="container-login100-form-btn p-t-25">
           <%= form.submit "Cadastrar", class: "login100-form-btn" %>
