--- a/app/views/plans/new.html.erb
+++ b/app/views/plans/new.html.erb
@@ -11,10 +11,9 @@
           <br/>
           O melhor plano<br/>
           Meu plano<br/>
-          um plano<br/>
+          Plano infalível<br/>
           A minha vida<br/>
-          Minha graduação<br/>
-          Minha empresa
+          Plano A
         </div>
       </div>
     </div>
