--- a/app/views/plans/new.html.erb
+++ b/app/views/plans/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
 
   <div class="wrap-collabsible p-t-60 p-b-20">
-    <input id="collapsible" class="toggle" type="checkbox">
+    <input id="collapsible" class="toggle" type="checkbox" style="display: none">
     <label for="collapsible" class="lbl-toggle">EXEMPLOS</label>
     <div class="collapsible-content">
       <div class="content-inner">
