Adding progress to status bar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,6 +20,14 @@
  *= require login/icon-font.min.scss
  */
 
+.color-ltr span{
+  color: #28a7e9;
+  font-weight: bold;
+  font-family: Raleway-Black;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 44px;
+}
 
 /* STYLES SPECIFIC TO FOOTER  */
 .footer {
