Test controller for swotparts and fixing controller

--- a/app/views/plans/_inputswotpart.html.erb
+++ b/app/views/plans/_inputswotpart.html.erb
@@ -1,4 +1,4 @@
-<%= form_tag swotparts_create_swot_swotpart_path do %>
+<%= form_tag swotparts_path do %>
   <%= hidden_field_tag :partname, tipo_do_swotpart %>
 
   <div class="input-group mb-3">
