--- a/app/views/swotparts/show.html.erb
+++ b/app/views/swotparts/show.html.erb
@@ -10,5 +10,10 @@
   <%= @swotpart.name %>
 </p>
 
+<p>
+  <strong>Name:</strong>
+  <%= @swotpart.partname %>
+</p>
+
 <%= link_to 'Edit', edit_swotpart_path(@swotpart) %> |
 <%= link_to 'Back', swotparts_path %>
