Changing index association of missions

--- a/app/views/missions/_mission.html.erb
+++ b/app/views/missions/_mission.html.erb
@@ -1,7 +1,7 @@
 <div class="col-sm-6">
   <div class="card">
     <div class="card-body">
-      <h5 class="card-header">Missão <%= mission.id %></h5>
+      <h5 class="card-header">Missão de <%=current_user.name %></h5>
       <div class="padding-all">
         <h5 class="card-title">Propósito de Vida</h5>
         <p class="card-text"><%= mission.purpose_of_life %></p>
