Spheres on initial page

--- a/app/assets/stylesheets/theme/templatemo-style.scss
+++ b/app/assets/stylesheets/theme/templatemo-style.scss
@@ -21,6 +21,10 @@ body {
   overflow-x: hidden; /* prevent horizontal scrollbar from appearing */
 }
 
+.color-dark {
+  color: #262626;
+}
+
 .color-white {
   color: #ffffff;
 }
