--- a/app/views/goals/_goal.html.erb
+++ b/app/views/goals/_goal.html.erb
@@ -3,7 +3,9 @@
     <div class="card">
       <div class="card-body">
         <div class="padding-all">
-          <h5 class="card-title">Nome da meta: <%= goal.name %> | <%= goal.progress %>% Concluído </h5>
+          <h5 class="card-title"><%= goal.name %> </h5>
+          <% goal_data = [["", goal.progress ]] %>
+          <%= bar_chart goal_data, suffix: "%", label: "Porcentagem concluída",  min: 0, max: 100, height: "70px" %>
         </div>
       </div>
     </div>
