--- a/app/views/spheres/sphereobjectives.html.erb
+++ b/app/views/spheres/sphereobjectives.html.erb
@@ -1,16 +1,22 @@
 <div class="container">
-    <% @objectives.each do |objective| %>
-      <div class="col-border m-r-100">
-        <div class="card">
-          <div class="card-body">
-            <div class="padding-all">
-              <h5 class="card-title">Objetivo: <%= objective.name %></h5>
-              <hr/>
-              <%= render partial: "goals/goal", :collection => objective.goals %>
-            </div>
+  <div class="col-xs-12  p-t-10">
+    <% @objectives.each_with_index do |objective, i| %>
+      <div class="offer offer-radius offer-primary">
+        <div class="shape">
+          <div class="shape-text">
+            <%= i + 1 %>
           </div>
-          <div class="card-footer bg-transparent border-success"><%= objective.created_at.strftime("%d/%m/%Y") %></div>
+        </div>
+        <div class="offer-content">
+          <h3 class="lead color-dark">
+            <%= objective.name %><br/>
+            Criado em: <%= objective.created_at.strftime("%d/%m/%Y") %>
+          </h3>
+          <p>
+            <%= render partial: "goals/goal", :collection => objective.goals %>
+          </p>
         </div>
       </div>
     <% end %>
+  </div>
 </div>
