--- a/app/views/objectives/index.html.erb
+++ b/app/views/objectives/index.html.erb
@@ -1,6 +1,6 @@
 <div class="col-xs-12  p-t-10">
   <% @objectives.each_with_index do |objective, i| %>
-    <div class="offer offer-radius offer-primary">
+    <div class="offer offer-radius offer-info">
       <div class="shape">
         <div class="shape-text">
           <%= i + 1 %>
