--- a/app/views/spheres/sphereobjectives.html.erb
+++ b/app/views/spheres/sphereobjectives.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="col-xs-12  p-t-10">
     <% @objectives.each_with_index do |objective, i| %>
-      <div class="offer offer-radius offer-primary">
+      <div class="offer offer-radius offer-info">
         <div class="shape">
           <div class="shape-text">
             <%= i + 1 %>
